# fastapi-learning

./: alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 575ff522ebc0_move_is_active_to_users_table.py  84dcf53a5b91_.py
api/: users.py
api/utils/: users.py
db/: db_setup.py
db/models/: mixins.py  user.py
pydantic_schemas/: user.py
