[tool.poetry]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = ["Muhammad Talha <talhashabbir9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.21"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
